--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,30 +28,30 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.7.0
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.6
+  flutter_native_splash: ^2.4.3
+  flutter_secure_storage: ^9.2.2
   font_awesome_flutter: ^10.8.0
+  gap: ^3.0.1
+  get_it: ^8.0.3
   go_router: ^14.4.1
+  google_fonts: ^6.2.1
+  image: ^4.5.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -62,15 +62,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  # - assets/images
-  #   - images/a_dot_ham.jpeg
+    # - assets/images
+    #   - images/a_dot_ham.jpeg
     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -90,3 +88,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_native_splash:
+  image: assets/images/LOGO.png
+  colour: "42a5f5"
+  android: true
+  ios: true
